projects/envsync-cli/output/workspace-check.txt
Checked=4517 Passed=4509 Failed=8
[FAIL] python3 -m py_compile src/cloud_providers/gcp.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/src/cloud_providers/gcp.py", line 2
    | Function | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax

[FAIL] python3 -m py_compile src/config_parser.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/src/config_parser.py", line 2
    | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax

[FAIL] python3 -m py_compile src/main.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/src/main.py", line 2
    | Function | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax

[FAIL] python3 -m py_compile src/sync_mechanism.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/src/sync_mechanism.py", line 2
    | Function | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax

[FAIL] python3 -m py_compile tests/test_cloud_providers.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/tests/test_cloud_providers.py", line 2
    | Function | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax

[FAIL] python3 -m py_compile tests/test_logger.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/tests/test_logger.py", line 28
    global LOG_DIR_NAME
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'LOG_DIR_NAME' is used prior to global declaration

[FAIL] python3 -m py_compile tests/test_main.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/tests/test_main.py", line 2
    | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax

[FAIL] python3 -m py_compile tests/test_sync_mechanism.py
File "/home/zaigopc/Desktop/my/hive-mind/projects/envsync-cli/workspace/tests/test_sync_mechanism.py", line 2
    | Function | Test Name | Expected Outcome |
    ^
SyntaxError: invalid syntax